--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "pg": "^7.4.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
