--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "dotenv": "^6.2.0",
     "express": "^4.16.3",
     "pg": "^7.4.1",
     "react": "^16.3.0",
