--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@material-ui/core": "^3.9.1",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "dotenv": "^6.2.0",
